--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -16,7 +16,7 @@
       
         <div class="div-form-login">
             
-            <form class="login-form" method="post" action="/login/page/doing"> 
+            <form class="login-form" method="post" action="/login/doing"> 
 
                 <div class="title">
                      <h2>Login</h2>
