--- a/views/partials/allArticles.ejs
+++ b/views/partials/allArticles.ejs
@@ -59,8 +59,10 @@
                             </li>
                             <li class="list-group-item">
                                 <h3> createdAt:</h3>
-                                <%=(articles[index].createdAt)%>
-                                    <%# .split(' ').splice(0,5).join(' ') %> 
+                                <% (articles[index].createdAt) %> 
+                             
+        
+                                    
                             </li>
 
                         </ul>
