--- a/views/registerPage.ejs
+++ b/views/registerPage.ejs
@@ -18,7 +18,7 @@
             <div class="title">
               <h2>Resiter</h2>   
             </div>
-            <form class="register-form" action="/register/page/doing" method="post" role="form"
+            <form class="register-form" action="/register/doing" method="post" role="form"
                 enctype="multipart/form-data">
                 <div class="content-reg-form">
                     <p style="display: none;">
